# REAL-artifact-evaluation

./: .gitignore  ENV_SETUP.md  EVALUATION_GUIDE.md  README.md  REMOTE_ACCESS.md  daemons  requirements.txt  run.py  run.sh
batfish/: run.sh
controller/: Makefile  channel.cpp  channel.hpp  channel_manager.cpp  channel_manager.hpp  const.cpp  const.hpp  debug.hpp  main.cpp  message.hpp  node_ops.cpp  node_ops.hpp  remote_channel.cpp  remote_channel.hpp  remote_worker.cpp  remote_worker.hpp  replay_manager.cpp  replay_manager.hpp  ring_buffer.hpp
docker/: .gitignore
docker/bird/: Dockerfile  README.md
docker/crpd/: Dockerfile
docker/frr/: Dockerfile  README.md
eval/: .gitignore  collect_csv.py  fig14.sh  fig1_9_10.sh  fig2_3.sh  plot.py  run_all.sh
eval/baseline/: frr.yaml
eval/config/: fig2.yaml
eval/preload/: bird.yaml  crpd_iter.yaml
lwc/: Cargo.toml
lwc/src/: lib.rs
lwc/src/common/: config.rs  mod.rs  shim.rs  utils.rs
lwc/src/subcmd/: cp.rs  create.rs  exec.rs  mod.rs  remove.rs  start.rs  stop.rs
preload/: Makefile  debug.cpp  debug.h  debug_nl.cpp  fdesc.cpp  fdesc.h  ld.so.preload  netlink.cpp  netlink.h  preload.cpp  preload.h  preload_nohdr.cpp  tcp.cpp  tcp.h  udp.cpp  udp.h  util.h
scripts/analysis/: cache_stat.py  eventchart-percore.py  eventchart-pernode-hires.py  eventchart-pernode.py  eventfilter.pl  filter_perf.py  memchart.py  pid2dockername.py  sched_events.py  split_stages.py  stackcollapse-perf.pl  timebar.py  workset.py
scripts/boot/: __main__.py  create_network.py  gen_docker_compose.py  runner_base.py
(+79 files in other folders)
