[package]
name = "lwc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.0"
rand = "0.8.5"
tar = "0.4.41"
serde_yaml = "0.9"
debug_print = "1.0.0"
libc = "0.2"

[[bin]]
name = "lwc"

[lib]
path = "src/lib.rs"
